syntax = "proto3";

package shopping_admin;

option go_package = "build/shopping_admin";

import "protos/global/global.proto";

// 店铺员工管理
message StoreStaff {
  // 员工id
  string staffId = 1;  // @gotags: gorm:"primary_key;<-:create,column:staff_id"
  // 用户id
  string userId = 2;  // @gotags: gorm:"column:user_id" validate:"required"
  // 微信id
  string openId = 3;  // @gotags: gorm:"column:open_id" swaggerignore:"true" json:"-,omitempty"
  // 店铺id
  string storeId = 4;  // @gotags: gorm:"column:store_id"
  // 姓名
  string realName = 5;  // @gotags: gorm:"column:real_name" validate:"required"
  // 店员头像
  string avatar = 6;  // @gotags: gorm:"column:avatar" validate:"required"
  // 店员名称
  string jobName = 7;  // @gotags: gorm:"column:job_name" validate:"required"
  // 手机号码
  string phone = 8;  // @gotags: gorm:"column:phone" minLength:"11" maxLength:"11"
  // 邮箱
  string email = 9;
  // 是否开启推送
  int64 pushStatus = 10;  // @gotags: gorm:"column:push_status" validate:"required"  minimum:"0" maximum:"1" default:"0"
  // 核销开关
  int64 verifyStatus = 11;  // @gotags: gorm:"column:verify_status" validate:"required"  minimum:"0" maximum:"1" default:"0"
  // 删除状态
  bool delStatus = 12;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 13;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 14;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 15;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 16;  // @gotags: gorm:"->" swaggerignore:"true"
}

message StoreStaffIds {
  repeated string staffId = 1;
  string userId = 2;
}

message StoreStaffPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询调教
  message QueryParams {
    // 店员名称
    string jobName = 1;
    // 姓名
    string realName = 2;
    // 手机号
    string phone = 3;
  }
  // 查询参数
  QueryParams params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

message StoreStaffResponse {
  int64 count = 1;  // 数据量
  string Msg = 2;  // 错误信息
  StoreStaff detail = 3;  // 详情
  repeated StoreStaff list = 4;  // 列表
}

service StoreStaffService {
  // 添加员工
  rpc Create(StoreStaff) returns (StoreStaffResponse);

  // 修改员工
  rpc Update(StoreStaff) returns (StoreStaffResponse);

  // 删除员工
  rpc Delete(StoreStaffIds) returns (StoreStaffResponse);

  // 获取员工分页列表
  rpc FindPageList(StoreStaffPageAuthQuery) returns (StoreStaffResponse);

  // 获取员工详情
  rpc FindById(StoreStaffIds) returns (StoreStaffResponse);
}